Fix Card Overlap

--- a/F2E02/base.css
+++ b/F2E02/base.css
@@ -75,12 +75,19 @@ body {
   padding-left:10px ;
   padding-right:10px ;
 }
-.end-group, .card{
+.end-group {
   display: inline-block;
   height:163px; 
   width:124px;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.card {
+  height: 100%;
+  display: inline-block;
+  background-repeat: no-repeat;
+  width:124px;
 }
 #end1{
   margin-right: 10px;
@@ -99,8 +106,11 @@ body {
   background-image: url("./img/card/card_57.png");
 }
 .card{
+  display: inline-block;
   margin-left: 30px;
+  margin-top: 50px;
   background-image: url("./img/card/card_53.png");
+  background-size: 124px 163px;
 }
 .card-place {
   height: 550px;
